--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "gulp-concat": "^2.6.1",
     "gulp-include": "^2.3.1",
     "gulp-minify": "^2.1.0",
     "gulp-rename": "^1.2.2"
